src/objects/Contract.object
<CustomObject>
    <fields>
        <fullName>Account_Owner_Manager_Email__c</fullName>
        <label>Account Owner Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contract_Reviewed_Approved_by__c</fullName>
        <label>Contract Reviewed/Approved by:</label>
        <picklist>
            <picklistValues>
                <fullName>Marcus Wappet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mark Rohrlach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Richard De dood</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wayne Burgoyne</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Vehicles_Purchased__c</fullName>
        <label>Number of Vehicles Purchased</label>
        <summarizedField>Associated_Product__c.Number_of_Vehicles_Purchased__c</summarizedField>
        <summaryForeignKey>Associated_Product__c.Contract__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Vehicles_remaining__c</fullName>
        <label>Number of Vehicles remaining</label>
        <summarizedField>Associated_Product__c.Number_of_Vehicles_remaining__c</summarizedField>
        <summaryForeignKey>Associated_Product__c.Contract__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_vehicles_Committed__c</fullName>
        <label>Number of vehicles Committed</label>
        <summarizedField>Associated_Product__c.Number_of_Vehicles_Commited__c</summarizedField>
        <summaryForeignKey>Associated_Product__c.Contract__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <listViews>
        <fullName>AllActivatedContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllContracts</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllDraftContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllInApprovalContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>All In Approval Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyActivatedContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>My Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyDraftContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>My Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyInApprovalContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>My In Approval Contracts</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>